--- a/style.scss
+++ b/style.scss
@@ -985,6 +985,12 @@ footer.footer-2 {
         max-width: 500px;
     }
 
+    button.btn-2 {
+    width: 80%;
+    
+  
+}
+
     .wraper-services {
         padding-top: 5%;
     }
