--- a/style.scss
+++ b/style.scss
@@ -989,7 +989,7 @@ footer.footer-2 {
     width: 80%;
     
   
-}
+   }
 
     .wraper-services {
         padding-top: 5%;
@@ -1151,6 +1151,10 @@ footer.footer-2 {
         
     }
 
+      button.btn-2 {
+       width: 80%;
+    }
+
    .title-banner h3 {
         font-size: 16px;
     }
@@ -1187,6 +1191,10 @@ footer.footer-2 {
         
     }
 
+      button.btn-2 {
+        width: 80%;
+    }
+
 
 
   
@@ -1211,6 +1219,10 @@ footer.footer-2 {
     button.btn-1 {
         width: 60%;
         
+    }
+
+      button.btn-2 {
+      width: 80%;
     }
 
 
