--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ main {
   position: relative;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%,40%);
 }
 
 .title-banner h3 {
