--- a/style.css
+++ b/style.css
@@ -904,13 +904,12 @@ footer.footer-2 {
   nav.menu-mobile {
     display: block;
   }
- .title-banner {
-  width: 90%;
-  display: inline-block;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-40%);
+   .title-banner {
+    width: 90%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,40%);
 }
   .title-banner h3 {
     font-size: 16px;
@@ -1042,13 +1041,12 @@ footer.footer-2 {
     max-width: 770px;
   }
   .title-banner {
-    width: 90%;
-    display: inline-block;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-40%);
-}
+  width: 90%;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,40%);
+ }
   button.btn-1 {
     width: 60%;
   }
@@ -1073,12 +1071,11 @@ footer.footer-2 {
   }
   .title-banner {
     width: 90%;
-    display: inline-block;
     position: relative;
     top: 50%;
     left: 50%;
-    transform: translateX(-40%);
-}
+    transform: translate(-50%,40%);
+  }
   button.btn-1 {
     width: 60%;
   }
