--- a/style.scss
+++ b/style.scss
@@ -132,11 +132,7 @@ main {
     padding: 30px;
     background-color: #0000008e;
     text-align: center;
-    display: inline-block;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%);
+    margin:200px auto;
     
 }
 .title-banner h3 {
@@ -937,7 +933,8 @@ footer.footer-2 {
     }
 
     .title-banner {
-        width: 90%;
+        width:90%;
+        margin:200px auto;
        
         
     }
@@ -1140,11 +1137,7 @@ footer.footer-2 {
        max-width: 770px;
     }
 
-    .title-banner {
-        width: 90%;
-       
-        
-    }
+   
 
     button.btn-1 {
         width: 60%;
@@ -1180,11 +1173,7 @@ footer.footer-2 {
         display: block;
     }
 
-    .title-banner {
-        width: 90%;
-       
-        
-    }
+
 
     button.btn-1 {
         width: 60%;
